Source/WebKit2: [EFL] WebKitTestRunner needs to turn on 'setContinuousSpellCheckingEnabled' https://bugs.webkit.org/show_bug.cgi?id=93611

Reviewed by Hajime Morita.

When WebKitTestRunner turns on the spelling feature with the resetStateToConsistentValues() method,
it happens that the WebProcess is still not launched (although it is already created).
In this case, isValid() method returns false.

This fix sends a message to the WebProcess messages queue, and the message
will be handled once the WebProcess is ready.

* Target.pri:
Adds missing files to compile spellcheking feature for WebKit2-Qt
to use WebKit C API from WKTextChecker.h.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::updateTextCheckerState):
Uses canSendMessage() method instead of isValid() to check whether the message to
the WebProcess can be sent.

Tools: WebKitTestRunner needs to turn on 'setContinuousSpellCheckingEnabled'
https://bugs.webkit.org/show_bug.cgi?id=93611

Reviewed by Hajime Morita.

WebKitTestRunner enables spelling feature to pass the layout tests from editing/spelling.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):
Enables spelling by WebKit2 C API.

* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::TestController::platformInitializeContext):
Attaches WKTextChecker's client and sets default language for WebKit2-EFL port.

LayoutTests: [EFL] WebKitTestRunner needs to turn on 'setContinuousSpellCheckingEnabled'
https://bugs.webkit.org/show_bug.cgi?id=93611

Reviewed by Hajime Morita.

Unskip the spelling tests from efl-wk2/TestExpectations to run them for WebKit2-EFL.
Add new baselines for two spelling tests.

* platform/efl-wk2/TestExpectations:
* platform/efl/TestExpectations:
* platform/efl/editing/spelling/inline_spelling_markers-expected.txt: Added.
* platform/efl/editing/spelling/spelling-expected.txt: Added.


Canonical link: https://commits.webkit.org/118248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132333 268f45cc-cd09-0410-ab3c-d52691b4dbfc